fixes errors in app.py and hello_form

--- a/gothonweb/templates/hello_form.html
+++ b/gothonweb/templates/hello_form.html
@@ -12,7 +12,8 @@
       <br>
       Your Name: <input type="text" name="name">
       <br>
+      <input type="submit">
     </form>
-    
+
   </body>
 </html>
