--- a/gothonweb/templates/index.html
+++ b/gothonweb/templates/index.html
@@ -1,15 +1,11 @@
-<html>
-  <head>
-    <title>Gothons of Planet Percal #25</title>
-  </head>
-<body>
+{% extends "layout.html" %}
 
-  {% if greeting %}
-      I just wanted to say
-      <em style="color: green; font-size: 2em;">{{greeting}}</em>
-  {% else %}
-      <em>Hello</em>, world!
-  {% endif %}
+{% block content %}
 
-</body>
-</html>
+{% if greeting %}
+  I just wanted to say
+  <em style="color: green; font-size: 2em;">{{ greeting }}</em>.
+{% else %}
+  <em>Hello</em>, world
+
+{% end block %}
