--- a/gothonweb/templates/hello_form.html
+++ b/gothonweb/templates/hello_form.html
@@ -1,19 +1,15 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Sample Web Form</title>
-  </head>
-  <body>
-    <h1>Fill Out This Form</h1>
+{% extends "layout.html" %}
 
-    <form class="" action="/hello" method="POST">
-      A Greeting: <input type="text" name="greet">
-      <br>
-      Your Name: <input type="text" name="name">
-      <br>
-      <input type="submit">
-    </form>
+{% block content %}
 
-  </body>
-</html>
+<h1>Fill Out this Form</h1>
+
+<form action="/hello" method="POST">
+  A Greeting: <input type="text" name="greet">
+  <br>
+  Your Name: <input type="text" name="name">
+  <br>
+  <input type="submit">
+</form>
+
+{% endblock %}
