--- a/gothonweb/templates/hello_form.html
+++ b/gothonweb/templates/hello_form.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h1>Fill Out this Form</h1>
+<h1>Fill Out This Form</h1>
 
 <form action="/hello" method="POST">
   A Greeting: <input type="text" name="greet">
