--- a/gothonweb/templates/index.html
+++ b/gothonweb/templates/index.html
@@ -7,5 +7,6 @@
   <em style="color: green; font-size: 2em;">{{ greeting }}</em>.
 {% else %}
   <em>Hello</em>, world
+{% endif %}
 
-{% end block %}
+{% endblock %}
